# rhythmix-model

./: .gitignore  README.md  pyproject.toml
conf/: __init__.py  logging.py  settings.py
src/rhythmix_api/: __init__.py  config.py  main.py
src/rhythmix_api/v1/routers/: model.py
src/rhythmix_model/: __init__.py
src/rhythmix_model/configs/: settings.py
src/rhythmix_model/preprocessing/: create_vector_db.py  download_data.py
src/rhythmix_model/recommender/: graph.py  nodes.py  prompts.py  utils.py  validators.py
