[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
dependencies = [
  "fastapi>=0.115.12",
  "ipykernel>=6.29.5",
  "kagglehub>=0.3.12",
  "langchain-community>=0.3.22",
  "langchain-openai>=0.3.14",
  "langchain-qdrant>=0.2.0",
  "langchain>=0.3.24",
  "langgraph>=0.3.34",
  "loguru>=0.7.3",
  "pandas>=2.2.3",
  "pre-commit>=4.2.0",
  "pydantic-settings>=2.9.1",
  "python-dotenv>=1.1.0",
  "qdrant-client[fastembed]>=1.14.2",
  "redis>=5.2.1",
  "uvicorn>=0.34.2"
]
description = "Add your description here"
name = "rhythmix-model"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[tool.hatch.build.targets.wheel]
packages = [
  "conf",
  "src/rhythmix_api",
  "src/rhythmix_model"
]
